<resources>
    <string name="app_name">EarableCompanion</string>
    <string name="preference_about_header">About</string>
    <string name="preference_bluetooth_header">Bluetooth</string>
    <string name="preference_recording_header">Recording</string>
    <string name="preference_data_header">Recording</string>
    <string name="preference_about_key" translatable="false">preference_about_key</string>
    <string name="preference_about_summary">EarableCompanion %s</string>
    <string name="preference_clear_data_header">Clear data</string>
    <string name="preference_clear_data_key" translatable="false">preference_clear_data_key</string>
    <string name="preference_ignore_unknown_devices_key" translatable="false">preference_ignore_unknown_devices_key</string>
    <string name="preference_ignore_unknown_devices_title">Ignore unknown devices</string>
    <string name="preference_ignore_unknown_devices_summary">Don\'t show devices without a name during scan</string>
    <string name="preference_connection_bond_key" translatable="false">preference_connection_bond</string>
    <string name="preference_connection_bond_title">Bond with devices</string>
    <string name="preference_connection_bond_summary">Initiates a bonding request during connection process</string>
    <string name="preference_record_logs_key" translatable="false">preference_record_logs_key</string>
    <string name="preference_record_logs_title">Enable logging</string>
    <string name="preference_record_logs_summary">Saves Bluetooth status and connection information during a recording</string>
    <string name="preference_intercept_media_buttons_key" translatable="false">preference_intercept_media_buttons_key</string>
    <string name="preference_intercept_media_buttons_title">Intercept media buttons</string>
    <string name="preference_intercept_media_buttons_summary">Creates an active MediaSession to intercept and record media button events. This will break e.g. music control.</string>
    <string name="preference_record_microphone_key" translatable="false">preference_record_microphone_key</string>
    <string name="preference_record_microphone_title">Enable microphone support</string>
    <string name="preference_record_microphone_summary">Enables audio recording support if a compatible paired device is found.</string>
    <string name="preference_recording_labels_key" translatable="false">preference_recording_labels_key</string>
    <string name="preference_recording_labels_title">Edit available recording labels</string>
    <string name="preference_recording_labels_default">Standing,Sitting,Walking,Running</string>
    <string name="data_created_at">Created at %s</string>
    <string name="data_duration">Duration: %s</string>
    <string name="data_entry_amount">%d datapoints</string>
    <string name="permissions_disclaimer">Permissions need to be accepted for bluetooth functionality</string>
    <string name="audio_permission_disclaimer">Permission needs to be accepted for mic recording</string>
    <string name="bluetooth_disclaimer">Bluetooth needs to be enabled before a connection can be made</string>
    <string name="enable">Enable</string>
    <string name="accept">Accept</string>
    <string name="close">Close</string>
    <string name="calibrate">Calibrate</string>
    <string name="notification_title">EarableCompanion</string>
    <string name="notification_message">EarableCompanion running in the background</string>
    <string name="connection_device_icon_description">Device icon</string>
    <string name="bottom_sheet_handle_icon_description">Bottomsheet handle</string>
    <string name="bottom_sheet_close_icon_description">Bottomsheet close icon</string>
    <string name="calibration_header_text">Calibration</string>
    <string name="calibration_description_text">Saving calibration values, please try to hold still during this process.</string>
    <string name="connection_header_text">Searching for devices</string>
    <string name="connection_snackbar_text_connected">Connected to %s</string>
    <string name="connection_header_text_connecting">Connecting to %s</string>
    <string name="connection_header_text_pairing">Pairing with %s</string>
    <string name="connection_snackbar_text_failed">An error occurred</string>
    <string name="sample_rate_text">Sample rate</string>
    <string name="sample_rate_label_formatter">%d Hz</string>
    <string name="button_enabled_text">Button presses enabled</string>
    <string name="acc_enabled_text">Accelerometer enabled</string>
    <string name="acc_range_text">Accelerometer range</string>
    <string name="acc_range_2">± 2 g</string>
    <string name="acc_range_4">± 4 g</string>
    <string name="acc_range_8">± 8 g</string>
    <string name="acc_range_16">± 16 g</string>
    <string name="acc_low_pass_text">Accelerometer low pass filter enabled</string>
    <string name="acc_low_pass_bandwidth_text">Accelerometer low pass filter bandwidth</string>
    <string name="acc_low_pass_bandwidth_5">5 Hz</string>
    <string name="acc_low_pass_bandwidth_10">10 Hz</string>
    <string name="acc_low_pass_bandwidth_20">20 Hz</string>
    <string name="acc_low_pass_bandwidth_41">41 Hz</string>
    <string name="acc_low_pass_bandwidth_92">92 Hz</string>
    <string name="acc_low_pass_bandwidth_184">184 Hz</string>
    <string name="acc_low_pass_bandwidth_460">460 Hz</string>
    <string name="gyro_enabled_text">Gyrosensor enabled</string>
    <string name="gyro_range_text">Gyrosensor range</string>
    <string name="gyro_range_250">± 250 deg/s</string>
    <string name="gyro_range_500">± 500 deg/s</string>
    <string name="gyro_range_1000">± 1000 deg/s</string>
    <string name="gyro_range_2000">± 2000 deg/s</string>
    <string name="gyro_low_pass_text">Gyrosensor low pass filter enabled</string>
    <string name="gyro_low_pass_bandwidth_text">Gyrosensor low pass filter range</string>
    <string name="gyro_low_pass_bandwidth_5">5 Hz</string>
    <string name="gyro_low_pass_bandwidth_10">10 Hz</string>
    <string name="gyro_low_pass_bandwidth_20">20 Hz</string>
    <string name="gyro_low_pass_bandwidth_41">41 Hz</string>
    <string name="gyro_low_pass_bandwidth_92">92 Hz</string>
    <string name="gyro_low_pass_bandwidth_184">184 Hz</string>
    <string name="gyro_low_pass_bandwidth_250">250 Hz</string>
    <string name="gyro_low_pass_bandwidth_3600">3.6 kHz</string>
    <string name="sensor_data_overview_no_data_icon_description">Save icon</string>
    <string name="sensor_data_overview_no_data_text">No data has been recorded yet</string>
    <string name="sensor_data_overview_remove_text">Remove</string>
    <string name="overview_device_icon_description">Device icon</string>
    <string name="overview_config_icon_description">Config icon</string>
    <string name="overview_show_values_button">Show values</string>
    <string name="overview_mic_disabled_icon_description">Enable mic icon</string>
    <string name="overview_mic_disabled_header">Microphone disabled</string>
    <string name="overview_mic_disabled_button">Enable</string>
    <string name="overview_mic_enabled_header">Microphone enabled</string>
    <string name="overview_mic_enabled_connected">Connection status: Connected</string>
    <string name="overview_mic_enabled_disconnected">Connection status: Disconnected</string>
    <string name="overview_mic_enabled_button">Disable</string>
    <string name="overview_mic_enabled_icon_description">Disable mic icon</string>
    <string name="overview_connect_button_description">Start a connection</string>
    <string name="overview_connect_button_text">Connect a device</string>
    <string name="overview_no_devices_icon_description">Device hub icon</string>
    <string name="overview_no_devices_text">Start connecting your earables with the button below</string>
    <string name="sensor_data_overview_data_icon_description">Data chart icon</string>
    <string name="overview_fragment_title">Devices</string>
    <string name="unknown_device_name">Unknown device</string>
    <string name="unknown_device_address">Unknown address</string>
    <string name="unknown_esense_device_name">eSense device</string>
    <string name="unknown_cosinuss_device_name">cosinuss device</string>
    <string name="sensor_data_overview_fragment_title">Data</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="remove_device_item_title">Remove Device</string>
    <string name="remove_data_item_title">Remove Data</string>
    <string name="remove_device_dialog_title">Are you sure you want to remove this device?</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="remove_data_dialog_title">Are you sure you want to remove this data recording?</string>
    <string name="clear_data_dialog_title">Are you sure you want to clear all data?</string>
    <string name="clear_data_dialog_positive">Clear data</string>
    <string name="clear_data_dialog_negative">Cancel</string>
    <string name="earable_esense_description">Supported sensors:\n- Accelerometer\n- Gyrosensor\n- Button presses</string>
    <string name="earable_cosinuss_description">Supported sensors:\n- Heart rate\n- Body temperature</string>
    <string name="earable_cosinuss_acc_description">Supported sensors:\n- Heart rate\n- Body temperature\n- Accelerometer</string>
    <string name="earable_not_supported_description">Unsupported device</string>
    <string name="earable_supported_sensors_header">Supported sensors:\n</string>
    <string name="earable_supported_sensors_accelerometer">- Acceleromter</string>
    <string name="earable_supported_sensors_gyrosensor">- Gyrosensor</string>
    <string name="earable_supported_sensors_button">- Button presses</string>
    <string name="earable_supported_sensors_heart_rate">- Heart rate</string>
    <string name="earable_supported_sensors_body_temperature">- Body temperature</string>
    <string name="earable_supported_sensors_oximeter">- Pulse oximeter</string>
    <string name="config_saved_successful">Configuration has been sent to device</string>
    <string name="config_saved_failed">Failed to send configuration to device</string>
    <string name="device_save_fab_description">Send configuration to device</string>
    <string name="radio_group_button_disabled">Disabled</string>
    <string name="record_fab_description">Start or stop a recording</string>
    <string name="record_fab_text">Record</string>
    <string name="stop_record_fab_text">Stop</string>
    <string name="overview_recording_icon_description">Recording icon</string>
    <string name="overview_recording_title_text">Recording active: %s</string>
    <string name="overview_latest_values_text">Latest values: %s</string>
    <string name="recording_started_datetime_format">Started %s</string>
    <string name="recording_stopped_datetime_format">Stopped %s</string>
    <string name="start_recording_dialog_title">Start a recording</string>
    <string name="start_recording_dialog_hint">Title</string>
    <string name="start_recording_dialog_positive">Start</string>
    <string name="start_recording_dialog_negative">Cancel</string>
    <string name="start_recording_dialog_title_default">Sensor data</string>
    <string name="export_fab_description">Export a data recording</string>
    <string name="export_all_fab_description">Export all data recordings</string>
    <string name="export_fab_text">Export</string>
    <string name="export_all_fab_text">Export all</string>
    <string name="sensor_data_detail_description_title">Description</string>
    <string name="sensor_data_detail_description_icon_description">Description icon</string>
    <string name="sensor_data_detail_description_edit_text">Edit</string>
    <string name="sensor_data_detail_description_logs_text">Logs</string>
    <string name="label_header_text">Edit recording labels</string>
</resources>