<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="edu.teco.earablecompanion.overview.calibration.CalibrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calibration_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:max="100"
            app:indicatorSize="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/bottom_sheet_handle_icon_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_maximize_24" />

        <TextView
            android:id="@+id/text_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="marquee"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/calibration_header_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toStartOf="@id/icon_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/bottom_sheet_close_icon_description"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@id/text_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_header"
            app:layout_constraintTop_toTopOf="@id/text_header"
            app:srcCompat="@drawable/ic_baseline_clear_24" />

        <TextView
            android:id="@+id/text_calibration_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="@{vm.calibrationState.timeLeft}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            app:layout_constraintBottom_toTopOf="@id/text_calibration_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_header" />

        <TextView
            android:id="@+id/text_calibration_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/calibration_description_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_calibration_time" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>