<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/label_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon_handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/bottom_sheet_handle_icon_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_maximize_24" />

        <TextView
            android:id="@+id/text_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="marquee"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/label_header_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toStartOf="@id/icon_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/bottom_sheet_close_icon_description"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@id/text_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_header"
            app:layout_constraintTop_toTopOf="@id/text_header"
            app:srcCompat="@drawable/ic_baseline_clear_24" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_labels"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_header"
            tools:listitem="@layout/connection_device_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>