<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="item"
            type="edu.teco.earablecompanion.sensordata.detail.SensorDataDetailItem.Description" />

        <import type="android.view.View" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <ImageView
                android:id="@+id/sensor_data_detail_description_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:contentDescription="@string/sensor_data_detail_description_icon_description"
                android:src="@drawable/ic_baseline_description_24"
                app:layout_constraintBottom_toBottomOf="@id/sensor_data_detail_description_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/sensor_data_detail_description_title"
                app:tint="?attr/colorSecondary" />

            <TextView
                android:id="@+id/sensor_data_detail_description_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/sensor_data_detail_description_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintBottom_toTopOf="@id/sensor_data_detail_description_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sensor_data_detail_description_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@{item.description}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:visibility="@{item.description == null ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toTopOf="@id/sensor_data_detail_description_edit"
                app:layout_constraintEnd_toEndOf="@id/sensor_data_detail_description_title"
                app:layout_constraintStart_toStartOf="@id/sensor_data_detail_description_icon"
                app:layout_constraintTop_toBottomOf="@id/sensor_data_detail_description_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sensor_data_detail_description_edit"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor_data_detail_description_edit_text"
                app:icon="@drawable/ic_baseline_edit_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sensor_data_detail_description_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>